--- a/bogo-three-variants/package.json
+++ b/bogo-three-variants/package.json
@@ -1,12 +1,14 @@
 {
-  "name": "three-variants-template",
-  "version": "0.1.0",
+  "name": "bogo-three-variants",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --port 5173",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "pnpm run build && npx @tagadapay/plugin-cli deploy --verbose",
+    "deploy:dev": "pnpm run build && npx @tagadapay/plugin-cli deploy --dev --verbose"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
@@ -37,7 +39,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@tagadapay/plugin-sdk": "^1.0.27",
+    "@tagadapay/plugin-sdk": "^2.2.0",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -63,16 +65,17 @@
     "zod": "3.25.67"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.9",
+    "@tagadapay/plugin-cli": "^2.0.19",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^8.57.0",
     "postcss": "^8.5",
-    "tailwindcss": "^4.1.9",
-    "tw-animate-css": "1.3.3",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5",
-    "vite": "^4.5.2"
+    "vite": "^5.4.0"
   },
   "packageManager": "pnpm@10.0.0+sha512.b8fef5494bd3fe4cbd4edabd0745df2ee5be3e4b0b8b08fa643aa3e4c6702ccc0f00d68fa8a8c9858a735a0032485a44990ed2810526c875e416f001b17df12b"
 }
