--- a/v1/three-step-funnel/package.json
+++ b/v1/three-step-funnel/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "three-step-funnel-template",
-  "version": "1.0.0",
+  "name": "three-step-funnel-v2",
+  "version": "2.0.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -23,13 +23,18 @@
     "@hookform/resolvers": "^3.9.1",
     "@radix-ui/react-avatar": "1.1.2",
     "@radix-ui/react-checkbox": "1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.12",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "2.1.1",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-radio-group": "1.2.2",
     "@radix-ui/react-select": "2.1.4",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "1.1.1",
-    "@tagadapay/plugin-sdk": "1.0.30",
+    "@tagadapay/plugin-sdk": "^2.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
     "lucide-react": "^0.454.0",
     "react": "^19",
     "react-dom": "^19",
