feat: migrate quiz to v2

--- a/quiz-funnel/config/skincare.config.json
+++ b/quiz-funnel/config/skincare.config.json
@@ -1,7 +1,7 @@
 {
   "configName": "skincare",
   "title": "SkinCare",
-  "variants": ["variant_4093d57f4f39", "variant_291245bb5a74"],
+  "variants": ["variant_0cbb439511ef", "variant_56577676c6ee"],
   "defaultCurrency": "USD",
   "primaryColor": "#3cb371",
   "primaryForeground": "#222222",
