--- a/bogo/package.json
+++ b/bogo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jointboost-checkout-vite",
+  "name": "bogo-checkout-vite",
   "version": "1.0.0",
   "private": true,
   "type": "module",
@@ -16,9 +16,9 @@
     "deploy:dev": "npm run build && tgdcli deploy --dev --verbose",
     "deploy:staging": "npm run build && tgdcli deploy --staging --verbose",
     "deploy:prod": "npm run build && tgdcli deploy --prod --verbose",
-    "deploy:variant-a": "npm run build && tgdcli deploy --plugin-id jointboost-variant-a --name 'JointBoost Variant A' --verbose",
-    "deploy:variant-b": "npm run build && tgdcli deploy --plugin-id jointboost-variant-b --name 'JointBoost Variant B' --verbose",
-    "deploy:variant-c": "npm run build && tgdcli deploy --plugin-id jointboost-variant-c --name 'JointBoost Variant C' --verbose",
+    "deploy:variant-a": "npm run build && tgdcli deploy --plugin-id bogo-variant-a --name 'Bogo Variant A' --verbose",
+    "deploy:variant-b": "npm run build && tgdcli deploy --plugin-id bogo-variant-b --name 'Bogo Variant B' --verbose",
+    "deploy:variant-c": "npm run build && tgdcli deploy --plugin-id bogo-variant-c --name 'Bogo Variant C' --verbose",
     "sdk:link": "echo '🔗 Linking local SDK...' && npm link ../plugin-sdk && npm install",
     "sdk:unlink": "echo '🔓 Unlinking local SDK...' && npm unlink @tagadapay/plugin-sdk && npm install",
     "sdk:update": "npm install @tagadapay/plugin-sdk@latest",
