--- a/express-checkout-2/package.json
+++ b/express-checkout-2/package.json
@@ -37,7 +37,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
-    "@tagadapay/plugin-sdk": "^2.3.8",
+    "@tagadapay/plugin-sdk": "^2.7.16",
     "@vercel/analytics": "1.3.1",
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.20",
@@ -52,6 +52,7 @@
     "less": "^4.4.1",
     "lightningcss": "^1.30.1",
     "lucide-react": "^0.542.0",
+    "my-v0-project": "link:",
     "next-themes": "^0.4.4",
     "path": "^0.12.7",
     "react": "^19",
